--- a/framework_cifar10.ipynb
+++ b/framework_cifar10.ipynb
@@ -64,14 +64,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1\n"
+      "Epoch 1\n",
+      "Loss = 0.4792883919819676 :: Training = 0.96885 :: Test = 0.9631\n",
+      "Epoch 2\n",
+      "Loss = 0.4390914620258308 :: Training = 0.9771333333333333 :: Test = 0.9675\n",
+      "Epoch 3\n",
+      "Loss = 0.5298973906256939 :: Training = 0.9826 :: Test = 0.9727\n",
+      "Epoch 4\n",
+      "Loss = 0.42006682179008464 :: Training = 0.9837666666666667 :: Test = 0.9674\n",
+      "Epoch 5\n",
+      "Loss = 0.3201840575362849 :: Training = 0.9855333333333334 :: Test = 0.9719\n",
+      "Epoch 6\n",
+      "Loss = 0.2721845494547274 :: Training = 0.9846 :: Test = 0.9684\n",
+      "Epoch 7\n",
+      "Loss = 0.21796494788434684 :: Training = 0.9911166666666666 :: Test = 0.9776\n",
+      "Epoch 8\n",
+      "Loss = 0.15898890689346915 :: Training = 0.99055 :: Test = 0.9739\n",
+      "Epoch 9\n",
+      "Loss = 0.33746119893158033 :: Training = 0.98895 :: Test = 0.9745\n",
+      "Epoch 10\n",
+      "Loss = 0.3030278179553948 :: Training = 0.9931833333333333 :: Test = 0.9761\n"
      ]
     }
    ],
