--- a/framework_mnist_example.ipynb
+++ b/framework_mnist_example.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -380,29 +380,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1\n",
-      "Loss = 0.07818718259903683 :: Training = 0.9732833333333333 :: Test = 0.9678\n",
+      "Loss = 0.21804414618565904 :: Training = 0.9541666666666667 :: Test = 0.948\n",
       "Epoch 2\n",
-      "Loss = 0.09283546803510813 :: Training = 0.97795 :: Test = 0.9682\n",
+      "Loss = 0.173381103042492 :: Training = 0.9738666666666667 :: Test = 0.9646\n",
       "Epoch 3\n",
-      "Loss = 0.02227518435411974 :: Training = 0.9864666666666667 :: Test = 0.9762\n",
+      "Loss = 0.16919884437229185 :: Training = 0.9797666666666667 :: Test = 0.9701\n",
       "Epoch 4\n",
-      "Loss = 0.0035256023622891658 :: Training = 0.98465 :: Test = 0.9731\n",
+      "Loss = 0.054803257989809326 :: Training = 0.97945 :: Test = 0.967\n",
       "Epoch 5\n",
-      "Loss = 0.05684140114203318 :: Training = 0.9838 :: Test = 0.9708\n",
+      "Loss = 0.04128907720764085 :: Training = 0.9905833333333334 :: Test = 0.9765\n",
       "Epoch 6\n",
-      "Loss = 0.0004846753509387959 :: Training = 0.9918833333333333 :: Test = 0.9779\n",
+      "Loss = 0.08955413650926831 :: Training = 0.9875333333333334 :: Test = 0.9725\n",
       "Epoch 7\n",
-      "Loss = 0.0007978620334553979 :: Training = 0.9916666666666667 :: Test = 0.9762\n",
+      "Loss = 0.010240272769310384 :: Training = 0.9896333333333334 :: Test = 0.9749\n",
       "Epoch 8\n",
-      "Loss = 0.001769663748842804 :: Training = 0.9936333333333334 :: Test = 0.9775\n",
+      "Loss = 0.1426111798536576 :: Training = 0.98435 :: Test = 0.9707\n",
       "Epoch 9\n",
-      "Loss = 0.0020417702170827104 :: Training = 0.9944666666666667 :: Test = 0.9796\n",
+      "Loss = 0.1466513199133178 :: Training = 0.9541666666666667 :: Test = 0.9399\n",
       "Epoch 10\n",
-      "Loss = 0.0017113544255429197 :: Training = 0.99375 :: Test = 0.9793\n"
+      "Loss = 0.011097984615743576 :: Training = 0.99055 :: Test = 0.9756\n"
      ]
     }
    ],
    "source": [
+    "from htw_nn_framework.networks import *\n",
+    "from htw_nn_framework.activation_func import *\n",
+    "from htw_nn_framework.loss_func import *\n",
+    "from htw_nn_framework.layer import *\n",
+    "from htw_nn_framework.optimizer import *\n",
+    "\n",
     "# design a three hidden layer architecture with Dense-Layer\n",
     "# and ReLU as activation function\n",
     "def fcn_mnist():\n",
